--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 
         <div class="sec4 sec">
             <div class="text-wraper"><p class="fw-bold">In Germany I worked as Flight Dispatcher till the pandemic crisis.</p>
-                <p>A flight dispatcher (also known as an airline dispatcher or flight operations officer) assists in planning flight paths, taking into account aircraft performance and loading, enroute winds, thunderstorm and turbulence forecasts, airspace restrictions, and airport conditions.</p>
+                <p class="fw-bold">A flight dispatcher (also known as an airline dispatcher or flight operations officer) assists in planning flight paths, taking into account aircraft performance and loading, enroute winds, thunderstorm and turbulence forecasts, airspace restrictions, and airport conditions.</p>
             </div>
             
         </div>
