--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
             <br>
 
             <label for="e-mail">Your Email<span class="red-star">*</span></label><br>
-            <input placeholder="RuslanTissen@gmail.com" type="email" id="e-mail">
+            <input placeholder="rthyssen73@gmail.com" type="email" id="e-mail">
             <br><br>
 
             <label for="website">Your website</label><br>
